--- a/experiments/mcmp/exbw.toml
+++ b/experiments/mcmp/exbw.toml
@@ -1,4 +1,4 @@
 [training]
 domain_pddl = "benchmarks/mcmp/exbw.domain_det.NO-COND.pddl"
 tasks_dir = "benchmarks/mcmp/training"
-plans_dir = ""
+plans_dir = "benchmarks/mcmp/training_plan"
